{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3c95b720-3823-4b9c-b0a0-378ace9288d0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b09b5775-86c4-4250-844e-c6534e662f78",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "97d5f09a-8d7a-4157-9585-ab02d0a44a4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightHit",
                    "type": "Button",
                    "id": "d9025521-faf8-4201-9465-303e758ab194",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpperCut",
                    "type": "Button",
                    "id": "06831fcb-c16b-4f3d-97a1-d88875b0f543",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyHit",
                    "type": "Button",
                    "id": "280f33e7-e6d8-4006-9eb5-6365427de53f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "ea5f3fac-85e8-4ebe-9c4e-31dfb3f0cfb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7b63d6dd-a79b-47c7-af3a-723e9aa1e690",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1ac3aa8b-7518-4981-8d3b-eeae2fef0fe9",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "283212cc-f06c-4b0e-b702-9570ba5fd31c",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5c1e7419-ca93-4c79-a295-518ec66a2466",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "de7a3c0d-2543-49b5-8421-8dcb40139efe",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "3a0bb56a-e03b-4c1a-84f1-516f74b09058",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "acefe92f-6669-4b84-ab2c-9eaa19e0aa9f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "35195fbb-f020-485d-b6fe-762e28a7d5ef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2aa63764-7b1f-46fa-a8ec-1accc718dc1a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "87592a7f-19d5-422d-8b36-f36b06050dcd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a051c665-c9a5-45a4-a245-81ed283a5e7b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da147a35-fe97-455f-8c29-e29f19044718",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "354e3b0d-abfb-4b09-ba58-40c7ace37da7",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "LightHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b607bfe-6eff-4231-9ff4-68791acaa520",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "LightHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87cb7086-d322-41d3-878e-58aa22175587",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "UpperCut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ff3ba34-1605-4312-91cd-2754ad57d2cc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "UpperCut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3eda1acc-38ce-4e35-b62f-29ca3542fb11",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "HeavyHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "031fe176-1896-4e70-a084-2d9b20b28879",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "HeavyHit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31b8d585-f47b-4845-9819-5e7c740285c6",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abd137a3-5e23-4dbe-bece-122196b20ad5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Player1;Player2",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player1",
            "bindingGroup": "Player1",
            "devices": []
        },
        {
            "name": "Player2",
            "bindingGroup": "Player2",
            "devices": []
        }
    ]
}